--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 68613f4
-	base = b408f7e
-	trim = 
-	trimbase = 
+	base = bcaaea7
+	trim = microstrain_inertial_examples
+	trimbase = b408f7e
