--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 68613f4
-	base = 1743426
-	trim = 
-	trimbase = 
+	base = 8413916
+	trim = microstrain_inertial_msgs
+	trimbase = 1743426
