--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/microstrain_inertial_examples
-	previous = 
-	base = bcaaea7
+	previous = bcaaea7
+	base = 88bed93
 	trim = 
 	trimbase = 
