--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/microstrain_inertial_examples
-	previous = 
-	base = 927d229
+	previous = 927d229
+	base = 559b527
 	trim = 
 	trimbase = 
