--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/microstrain_inertial_msgs
-	previous = 
-	base = 8413916
+	previous = 8413916
+	base = 3f2f331
 	trim = 
 	trimbase = 
