--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/microstrain_inertial_msgs
-	previous = 
-	base = 867140a
+	previous = 867140a
+	base = f9c20ae
 	trim = 
 	trimbase = 
