--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/microstrain_inertial_driver
-	previous = 
-	base = 4b56e69
+	previous = 4b56e69
+	base = b3d466a
 	trim = 
 	trimbase = 
