--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/microstrain_inertial_driver
-	previous = 
-	base = 28f4bc1
+	previous = 28f4bc1
+	base = 65665e0
 	trim = 
 	trimbase = 
