--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d99d4d
-	base = 48303ff
+	base = dda31a3
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 48303ff
