--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d99d4d
-	base = 0860d2c
+	base = 3b182fe
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 0860d2c
