--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d99d4d
-	base = 7f680bc
+	base = 9ea82bd
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 7f680bc
