--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>microstrain_inertial_driver</name>
-  <version>2.0.5</version>
+  <version>2.0.6</version>
   <description>The ros_mscl package provides a driver for the LORD/Microstrain inertial products.</description>
   <author>Brian Bingham</author>
   <author>Parker Hannifin Corp</author>
@@ -11,6 +11,10 @@
   <url type="website">https://github.com/LORD-MicroStrain/microstrain_inertial</url>
 
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
+
+  <!-- Used to determine which ROS version is available at build time -->
+  <build_depend>ros_environment</build_depend>
+
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>rclcpp_lifecycle</exec_depend>
   <exec_depend>diagnostic_aggregator</exec_depend>
