--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d99d4d
-	base = 44b899b
-	trim = 
-	trimbase = 
+	base = 49f23ff
+	trim = microstrain_inertial_examples
+	trimbase = 44b899b
