--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d99d4d
-	base = f772e1c
-	trim = 
-	trimbase = 
+	base = 13cb7bd
+	trim = microstrain_inertial_driver
+	trimbase = f772e1c
