--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d99d4d
-	base = d321bfb
-	trim = 
-	trimbase = 
+	base = 67baa6e
+	trim = microstrain_inertial_msgs
+	trimbase = d321bfb
