--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/microstrain_inertial_examples
-	previous = 
-	base = 49f23ff
+	previous = 49f23ff
+	base = 1bd658d
 	trim = 
 	trimbase = 
