--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/microstrain_inertial_examples
-	previous = 
-	base = 37a2eae
+	previous = 37a2eae
+	base = 0e08775
 	trim = 
 	trimbase = 
