--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/microstrain_inertial_driver
-	previous = 
-	base = 13cb7bd
+	previous = 13cb7bd
+	base = dded887
 	trim = 
 	trimbase = 
