--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/microstrain_inertial_driver
-	previous = 
-	base = 29b3bdd
+	previous = 29b3bdd
+	base = 838530e
 	trim = 
 	trimbase = 
