--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/microstrain_inertial_msgs
-	previous = 
-	base = 67baa6e
+	previous = 67baa6e
+	base = ef8cc32
 	trim = 
 	trimbase = 
