--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/microstrain_inertial_msgs
-	previous = 
-	base = a30f106
+	previous = a30f106
+	base = e054e9b
 	trim = 
 	trimbase = 
