--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 951d670
-	base = 47d14f9
+	base = bcf2426
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 47d14f9
