--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 951d670
-	base = 08c5a51
+	base = 5d7955a
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 08c5a51
