--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 951d670
-	base = fd03b61
+	base = 6a871f3
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = fd03b61
