--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 951d670
-	base = 9ac90ed
+	base = 440ff6d
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 9ac90ed
