--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 951d670
-	base = c4b5663
+	base = 0d9983f
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = c4b5663
