--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 951d670
-	base = 82ee974
+	base = d213978
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 82ee974
