--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = a9ff5fb
+	base = 7fc04b8
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = a9ff5fb
