--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = 72260a7
+	base = 4f6b44b
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 72260a7
