--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = bd00ef6
+	base = 11f0f3c
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = bd00ef6
