--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = 31384c7
+	base = 0c7d91c
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 31384c7
