--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = 2e75c66
+	base = f882318
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 2e75c66
