--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = fbe5598
+	base = d219209
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = fbe5598
