--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = a3372c5
-	trim = 
-	trimbase = 
+	base = dc0df39
+	trim = microstrain_inertial_examples
+	trimbase = a3372c5
