--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = 2f6f07b
-	trim = 
-	trimbase = 
+	base = b497b3c
+	trim = microstrain_inertial_driver
+	trimbase = 2f6f07b
