--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = 322f940
-	trim = 
-	trimbase = 
+	base = 13a3094
+	trim = microstrain_inertial_msgs
+	trimbase = 322f940
