--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_driver
-	previous = 
-	base = b497b3c
+	previous = b497b3c
+	base = eff256d
 	trim = 
 	trimbase = 
