--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_driver
-	previous = 
-	base = 895f237
+	previous = 895f237
+	base = bce05cf
 	trim = 
 	trimbase = 
