--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_examples
-	previous = 
-	base = dc0df39
+	previous = dc0df39
+	base = 35821b7
 	trim = 
 	trimbase = 
