--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_examples
-	previous = 
-	base = 9445a19
+	previous = 9445a19
+	base = ea4c785
 	trim = 
 	trimbase = 
