--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_msgs
-	previous = 
-	base = 13a3094
+	previous = 13a3094
+	base = ea2af71
 	trim = 
 	trimbase = 
