--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_msgs
-	previous = 
-	base = e5ebdaf
+	previous = e5ebdaf
+	base = 86476b4
 	trim = 
 	trimbase = 
