--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = 8b4fe65
+	base = 7baca31
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 8b4fe65
