--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = 16793eb
+	base = bcef666
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 16793eb
