--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = ce9800f
+	base = 5b0374e
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = ce9800f
