--- a/tracks.yaml
+++ b/tracks.yaml
@@ -36,9 +36,7 @@ tracks:
     - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
       -i :{release_inc} --os-name debian --os-not-required
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
-      :{release_inc} --os-name fedora
-    - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
-      :{release_inc} --os-name rhel
+      :{release_inc}
     devel_branch: ros2
     last_release: ros2-2.2.0
     last_version: 2.2.0
