--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = ae24e95
+	base = 6606719
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = ae24e95
