--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = e13d0f8
+	base = cef9772
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = e13d0f8
