--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = 7cb26d2
+	base = 8905be3
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 7cb26d2
