--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = 9b5137e
+	base = 9dd2363
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 9b5137e
