--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = 1e96d62
+	base = 7f0c2fb
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 1e96d62
