--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8444e5b
-	base = cf513a2
+	base = 2a734aa
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = cf513a2
