--- a/.devcontainer/.vscode-docker/settings.json
+++ b/.devcontainer/.vscode-docker/settings.json
@@ -1,11 +1,13 @@
 {
     "python.autoComplete.extraPaths": [
-        "/home/ros-mscl/devel/lib/python3/dist-packages",
-        "/opt/ros/noetic/lib/python3/dist-packages"
+        "/home/catkin_ws/install/microstrain_inertial_msgs/lib/python3.8/site-packages/",
+        "/home/catkin_ws/install/microstrain_inertial_quickview/lib/python3.8/site-packages/",
+        "/opt/ros/${env:ROS_DISTRO}/lib/python3.8/site-packages"
     ],
     "python.analysis.extraPaths": [
-        "/home/ros-mscl/devel/lib/python3/dist-packages",
-        "/opt/ros/noetic/lib/python3/dist-packages"
+        "/home/catkin_ws/install/microstrain_inertial_msgs/lib/python3.8/site-packages/",
+        "/home/catkin_ws/install/microstrain_inertial_quickview/lib/python3.8/site-packages/",
+        "/opt/ros/${env:ROS_DISTRO}/lib/python3.8/site-packages"
     ],
     "editor.tabSize": 2
 }
