--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 66a2d3e
-	base = cd1ae15
+	base = 5227984
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = cd1ae15
