--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 66a2d3e
-	base = a9b4896
+	base = 58d141f
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = a9b4896
