--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 66a2d3e
-	base = b5ed85b
+	base = 81017fc
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = b5ed85b
