--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 66a2d3e
-	base = a28aace
-	trim = 
-	trimbase = 
+	base = 9422e4c
+	trim = microstrain_inertial_rqt
+	trimbase = a28aace
