--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/microstrain_inertial_rqt
-	previous = 
-	base = 9422e4c
+	previous = 9422e4c
+	base = 1c245af
 	trim = 
 	trimbase = 
