--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/microstrain_inertial_rqt
-	previous = 
-	base = 3f51a00
+	previous = 3f51a00
+	base = 049449c
 	trim = 
 	trimbase = 
