--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 66a2d3e
-	base = d085e6e
+	base = ed73b72
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = d085e6e
