--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 66a2d3e
-	base = 7703487
+	base = b851481
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 7703487
