--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 66a2d3e
-	base = 4522bfb
+	base = a943c44
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 4522bfb
