--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 66a2d3e
-	base = d9176f8
-	trim = 
-	trimbase = 
+	base = e57026f
+	trim = microstrain_inertial_rqt
+	trimbase = d9176f8
