--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/microstrain_inertial_rqt
-	previous = 
-	base = e57026f
+	previous = e57026f
+	base = 3df63d0
 	trim = 
 	trimbase = 
