--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/microstrain_inertial_rqt
-	previous = 
-	base = c6e0ff6
+	previous = c6e0ff6
+	base = 7189a43
 	trim = 
 	trimbase = 
