--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/microstrain_inertial_msgs
-	previous = 
-	base = b851481
+	previous = b851481
+	base = 116919a
 	trim = 
 	trimbase = 
