--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/microstrain_inertial_msgs
-	previous = 
-	base = 54f2e65
+	previous = 54f2e65
+	base = a99884e
 	trim = 
 	trimbase = 
