--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/microstrain_inertial_examples
-	previous = 
-	base = a943c44
+	previous = a943c44
+	base = f00537d
 	trim = 
 	trimbase = 
