--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/microstrain_inertial_examples
-	previous = 
-	base = 6096e08
+	previous = 6096e08
+	base = 7f0ec19
 	trim = 
 	trimbase = 
