--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/microstrain_inertial_rqt
-	previous = 
-	base = 28bbd8c
+	previous = 28bbd8c
+	base = 63f0a7c
 	trim = 
 	trimbase = 
