--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/microstrain_inertial_driver
-	previous = 
-	base = ed73b72
+	previous = ed73b72
+	base = 4c67b6c
 	trim = 
 	trimbase = 
