--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/microstrain_inertial_driver
-	previous = 
-	base = 1bcd66a
+	previous = 1bcd66a
+	base = f2a6e8e
 	trim = 
 	trimbase = 
