--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 66a2d3e
-	base = 99aa105
+	base = fd527e4
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 99aa105
