--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 66a2d3e
-	base = 688e949
+	base = 62fbf3d
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 688e949
