--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 66a2d3e
-	base = e9f7a1d
+	base = ebc47e0
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = e9f7a1d
