--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 66a2d3e
-	base = d235ff3
-	trim = 
-	trimbase = 
+	base = 9313a89
+	trim = microstrain_inertial_rqt
+	trimbase = d235ff3
