--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_rqt
-	previous = 
-	base = 9313a89
+	previous = 9313a89
+	base = 8fb6fcd
 	trim = 
 	trimbase = 
