--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_rqt
-	previous = 
-	base = 3ad9430
+	previous = 3ad9430
+	base = f7a0244
 	trim = 
 	trimbase = 
