--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_driver
-	previous = 
-	base = fd527e4
+	previous = fd527e4
+	base = b1ef3e1
 	trim = 
 	trimbase = 
