--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/microstrain_inertial_driver
-	previous = 
-	base = 48a69ce
+	previous = 48a69ce
+	base = 6b3b00e
 	trim = 
 	trimbase = 
