--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_msgs
-	previous = 
-	base = 62fbf3d
+	previous = 62fbf3d
+	base = abdea02
 	trim = 
 	trimbase = 
