--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/microstrain_inertial_msgs
-	previous = 
-	base = 6aaf4bc
+	previous = 6aaf4bc
+	base = d123b62
 	trim = 
 	trimbase = 
