--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_examples
-	previous = 
-	base = ebc47e0
+	previous = ebc47e0
+	base = 58c9e32
 	trim = 
 	trimbase = 
