--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/microstrain_inertial_examples
-	previous = 
-	base = c65e01c
+	previous = c65e01c
+	base = 5a21051
 	trim = 
 	trimbase = 
