--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/microstrain_inertial_rqt
-	previous = 
-	base = 8f873b3
+	previous = 8f873b3
+	base = f14adda
 	trim = 
 	trimbase = 
