--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 359e03d
-	base = 550a731
+	base = 3c0cbbf
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 550a731
