--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 359e03d
-	base = e554a56
+	base = f97cc35
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = e554a56
