--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 359e03d
-	base = 5a0caa5
+	base = b387fa9
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 5a0caa5
