--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 359e03d
-	base = 7b5a429
+	base = 508ee70
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 7b5a429
