--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 359e03d
-	base = 3cdcdf1
+	base = 4db69e7
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 3cdcdf1
