--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 359e03d
-	base = 3487db3
+	base = a01dd60
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 3487db3
