--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 359e03d
-	base = 8b19d74
+	base = 17782c9
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 8b19d74
