--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 359e03d
-	base = e04555e
+	base = 0581e62
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = e04555e
