--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.3.0-1": ["Wed Dec 22 2021", "Rob Fisher", "rob.fisher@parker.com"]}
+{"2.4.0-1": ["Wed Jan 05 2022", "Rob Fisher", "rob.fisher@parker.com"], "2.3.0-1": ["Wed Dec 22 2021", "Rob Fisher", "rob.fisher@parker.com"]}
