--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 359e03d
-	base = e96b9da
+	base = a1b592c
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = e96b9da
