--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 359e03d
-	base = 79a96fe
+	base = 5c97bfe
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 79a96fe
