--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 359e03d
-	base = 6fd0448
+	base = 9ca8c60
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 6fd0448
