--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 359e03d
-	base = c5ab383
+	base = 5f814de
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = c5ab383
