--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a5fc3fb
-	base = 84584a5
+	base = 0f013d6
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 84584a5
