--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a5fc3fb
-	base = 81bc161
+	base = 5ecac49
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 81bc161
