--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a5fc3fb
-	base = c8cd12f
+	base = b439ec3
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = c8cd12f
