--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a5fc3fb
-	base = b6193df
+	base = 1fba23c
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = b6193df
