--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a5fc3fb
-	base = 6efa090
+	base = 26401f6
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 6efa090
