--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a5fc3fb
-	base = 10acf80
+	base = df0cdd5
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 10acf80
