--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a5fc3fb
-	base = d0b25f5
+	base = e4b6d88
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = d0b25f5
