--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a5fc3fb
-	base = 74216b9
+	base = 94b3eb5
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 74216b9
