--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ce64181
-	base = 48323b3
-	trim = 
-	trimbase = 
+	base = c7f5099
+	trim = microstrain_inertial_rqt
+	trimbase = 48323b3
