--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ce64181
-	base = 467e70c
-	trim = 
-	trimbase = 
+	base = ac96c8f
+	trim = microstrain_inertial_msgs
+	trimbase = 467e70c
