--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ce64181
-	base = c385199
-	trim = 
-	trimbase = 
+	base = 93f603a
+	trim = microstrain_inertial_examples
+	trimbase = c385199
