--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_rqt
-	previous = 
-	base = c7f5099
+	previous = c7f5099
+	base = c7b0b7b
 	trim = 
 	trimbase = 
