--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_rqt
-	previous = 
-	base = 06db7d0
+	previous = 06db7d0
+	base = fabe1b2
 	trim = 
 	trimbase = 
