--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_driver
-	previous = 
-	base = 6c6bc94
+	previous = 6c6bc94
+	base = b72ae64
 	trim = 
 	trimbase = 
