--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_examples
-	previous = 
-	base = b0a252b
+	previous = b0a252b
+	base = 78c9ee9
 	trim = 
 	trimbase = 
