--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_examples
-	previous = 
-	base = a1a8a1e
+	previous = a1a8a1e
+	base = 1c2a21c
 	trim = 
 	trimbase = 
