--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_driver
-	previous = 
-	base = 5720239
+	previous = 5720239
+	base = 9a6ff8d
 	trim = 
 	trimbase = 
