--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_rqt
-	previous = 
-	base = fd03d28
+	previous = fd03d28
+	base = f50ed5a
 	trim = 
 	trimbase = 
