--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_msgs
-	previous = 
-	base = 714729f
+	previous = 714729f
+	base = b492ed5
 	trim = 
 	trimbase = 
