--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_driver
-	previous = 
-	base = f4f80b8
+	previous = f4f80b8
+	base = 8b1fa6c
 	trim = 
 	trimbase = 
