--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/microstrain_inertial_driver
-	previous = 
-	base = 207d0b5
+	previous = 207d0b5
+	base = af94ba7
 	trim = 
 	trimbase = 
