--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_msgs
-	previous = 
-	base = ac96c8f
+	previous = ac96c8f
+	base = 1923847
 	trim = 
 	trimbase = 
