--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/microstrain_inertial_msgs
-	previous = 
-	base = 004bf51
+	previous = 004bf51
+	base = 1d3c523
 	trim = 
 	trimbase = 
