--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/microstrain_inertial_rqt
-	previous = 
-	base = 87aa1db
+	previous = 87aa1db
+	base = db7de75
 	trim = 
 	trimbase = 
