--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_examples
-	previous = 
-	base = 93f603a
+	previous = 93f603a
+	base = 6dd1542
 	trim = 
 	trimbase = 
