--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/microstrain_inertial_examples
-	previous = 
-	base = b1c845f
+	previous = b1c845f
+	base = fddff3e
 	trim = 
 	trimbase = 
