--- a/tracks.yaml
+++ b/tracks.yaml
@@ -79,5 +79,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/LORD-MicroStrain/microstrain_inertial.git
-    version: 2.5.0
-    version_saved: :{auto}
+    version: :{auto}
