--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0172f25
-	base = 530b504
+	base = 022e894
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 530b504
