--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0172f25
-	base = 9112d7c
+	base = 60b91af
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 9112d7c
