--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0172f25
-	base = f7faad6
+	base = 1314417
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = f7faad6
