--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0172f25
-	base = 451c148
+	base = 472644a
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 451c148
