--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0172f25
-	base = a62cb7e
+	base = 0cdf1b4
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = a62cb7e
