--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0172f25
-	base = e43cb1c
+	base = 24a4b1f
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = e43cb1c
