--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0172f25
-	base = 57cc566
+	base = 595a6a2
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 57cc566
