--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0172f25
-	base = ae1297b
+	base = 8535f75
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = ae1297b
