Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.5.0-1": ["Thu Jan 27 2022", "Rob Fisher", "rob.fisher@parker.com"], "2.4.0-1": ["Wed Jan 05 2022", "Rob Fisher", "rob.fisher@parker.com"], "2.3.0-1": ["Wed Dec 22 2021", "Rob Fisher", "rob.fisher@parker.com"]}
+{"2.5.1-1": ["Tue Feb 15 2022", "Rob Fisher", "rob.fisher@parker.com"], "2.5.0-1": ["Thu Jan 27 2022", "Rob Fisher", "rob.fisher@parker.com"], "2.4.0-1": ["Wed Jan 05 2022", "Rob Fisher", "rob.fisher@parker.com"], "2.3.0-1": ["Wed Dec 22 2021", "Rob Fisher", "rob.fisher@parker.com"]}
