--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0172f25
-	base = 636f6b6
+	base = 21ecf88
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 636f6b6
