--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0172f25
-	base = 282b8b9
+	base = a755477
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 282b8b9
