--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0172f25
-	base = 5680a69
+	base = 622d504
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 5680a69
