--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0172f25
-	base = 35d3d66
+	base = 808f1ba
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 35d3d66
