--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0f00082
-	base = fb06a01
+	base = 7e35b9c
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = fb06a01
