--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0f00082
-	base = 07511b4
+	base = 991cd6b
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 07511b4
