--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0f00082
-	base = 05ab827
+	base = 2cb2f85
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 05ab827
