--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0f00082
-	base = 9b2409e
+	base = ba3b975
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 9b2409e
