--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 46bedd4
-	base = ae613b2
+	base = 67e8a2b
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = ae613b2
