--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 46bedd4
-	base = 5748e0a
+	base = 51be8c1
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 5748e0a
