--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 46bedd4
-	base = 4d514e3
+	base = a572ada
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 4d514e3
