--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 46bedd4
-	base = 82a9e44
+	base = 059232b
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 82a9e44
