--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 46bedd4
-	base = 5ade3b6
+	base = 3b9c6fe
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 5ade3b6
