--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 46bedd4
-	base = 8d3fa9c
+	base = 4868606
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 8d3fa9c
