--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 46bedd4
-	base = bd5d5e5
+	base = 214968f
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = bd5d5e5
