--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 46bedd4
-	base = 701b3fd
+	base = 1d0b202
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 701b3fd
