--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 46bedd4
-	base = 449ca43
+	base = 2325e4d
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 449ca43
