--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 46bedd4
-	base = 133c36b
+	base = abec0db
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 133c36b
