--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 46bedd4
-	base = 13b1481
+	base = c83e1ed
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 13b1481
