--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 46bedd4
-	base = d1965d4
+	base = 43452a7
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = d1965d4
