--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1489cea
-	base = 89fbab3
+	base = 332e157
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 89fbab3
