--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1489cea
-	base = b2ab95a
+	base = be4c89f
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = b2ab95a
