--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1489cea
-	base = 1e53a05
+	base = a7f7b1e
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 1e53a05
