--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1489cea
-	base = ef01b7c
+	base = be1166f
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = ef01b7c
