Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.6.0": ["Rob Fisher", "rob.fisher@parker.com"], "2.5.1": ["Rob Fisher", "rob.fisher@parker.com"], "2.5.0": ["Rob Fisher", "rob.fisher@parker.com"], "2.4.0": ["Rob Fisher", "rob.fisher@parker.com"], "2.3.0": ["Rob Fisher", "rob.fisher@parker.com"]}
+{"2.7.0": ["Rob Fisher", "rob.fisher@parker.com"], "2.6.0": ["Rob Fisher", "rob.fisher@parker.com"], "2.5.1": ["Rob Fisher", "rob.fisher@parker.com"], "2.5.0": ["Rob Fisher", "rob.fisher@parker.com"], "2.4.0": ["Rob Fisher", "rob.fisher@parker.com"], "2.3.0": ["Rob Fisher", "rob.fisher@parker.com"]}
