--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1489cea
-	base = 2db38a6
+	base = 81d8c7f
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 2db38a6
