--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1489cea
-	base = 0c2a1f2
+	base = 446373c
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 0c2a1f2
