--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1489cea
-	base = 1f760f7
+	base = 8538775
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 1f760f7
