--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1489cea
-	base = 89a2183
+	base = fe77b2b
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 89a2183
