--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1489cea
-	base = bfd1cf1
+	base = d4332d9
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = bfd1cf1
