--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1489cea
-	base = 5d18b1e
+	base = 565be64
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 5d18b1e
