--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1489cea
-	base = 03c647d
+	base = 9840419
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 03c647d
