--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1489cea
-	base = 4bb85d5
+	base = 1747eb9
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 4bb85d5
