--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84c2598
-	base = d163845
+	base = 4a3a57a
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = d163845
