--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84c2598
-	base = eafacd7
+	base = a83b19b
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = eafacd7
