--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84c2598
-	base = 9811333
+	base = 5e8de5f
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 9811333
