--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84c2598
-	base = 217100b
+	base = 8110276
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 217100b
