--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84c2598
-	base = ac24f3f
+	base = 13de32e
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = ac24f3f
