--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84c2598
-	base = d4275e6
+	base = da8b69c
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = d4275e6
