--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84c2598
-	base = 473b7ed
+	base = e017756
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 473b7ed
