--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84c2598
-	base = f860a93
+	base = 176c26e
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = f860a93
