--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84c2598
-	base = 99429bb
+	base = 84f05cc
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 99429bb
