--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84c2598
-	base = 637f4da
+	base = e8a9abd
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 637f4da
