--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84c2598
-	base = 77e3dfb
+	base = de27960
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 77e3dfb
