--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84c2598
-	base = c754ae6
+	base = 308d8e7
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = c754ae6
