Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.6.0-1": ["Wed May 25 2022", "Rob Fisher", "rob.fisher@parker.com"], "2.5.1-1": ["Tue Feb 15 2022", "Rob Fisher", "rob.fisher@parker.com"], "2.5.0-2": ["Tue Feb 08 2022", "Rob Fisher", "rob.fisher@parker.com"]}
+{"2.7.1-1": ["Wed Nov 09 2022", "Rob Fisher", "rob.fisher@parker.com"], "2.6.0-1": ["Wed May 25 2022", "Rob Fisher", "rob.fisher@parker.com"], "2.5.1-1": ["Tue Feb 15 2022", "Rob Fisher", "rob.fisher@parker.com"], "2.5.0-2": ["Tue Feb 08 2022", "Rob Fisher", "rob.fisher@parker.com"]}
