--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f0998dc
-	base = 9af1dee
+	base = ee3b1eb
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 9af1dee
