--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f0998dc
-	base = 68e103f
+	base = 3309fc2
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 68e103f
