--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f0998dc
-	base = 986ce73
+	base = a963437
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 986ce73
