--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f0998dc
-	base = 8d0c52d
+	base = 20b33cb
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 8d0c52d
