--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f0998dc
-	base = 5dbc874
+	base = 40fa8bf
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 5dbc874
