--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f0998dc
-	base = ebfa8fa
+	base = 0f33cf7
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = ebfa8fa
