--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f0998dc
-	base = e6df95e
+	base = 0a8a80b
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = e6df95e
