--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f0998dc
-	base = 414c341
+	base = b39a1be
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 414c341
