--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9303e37
-	base = fee664f
+	base = 5514413
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = fee664f
