--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9303e37
-	base = 55a9133
+	base = 9e2a0d5
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 55a9133
