--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9303e37
-	base = 12d0bc8
+	base = 5f1eb4e
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 12d0bc8
