--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9303e37
-	base = c0b12f7
+	base = ee898e5
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = c0b12f7
