--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9303e37
-	base = 3ba2fdc
+	base = 07de76f
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 3ba2fdc
