--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9303e37
-	base = bec4d28
+	base = da19870
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = bec4d28
