--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9303e37
-	base = ae7cac8
+	base = a3756e7
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = ae7cac8
