--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9303e37
-	base = bab703e
+	base = ed303b2
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = bab703e
