--- a/tracks.yaml
+++ b/tracks.yaml
@@ -106,4 +106,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/LORD-MicroStrain/microstrain_inertial.git
-    version: :{auto}
+    version: 3.0.1
+    version_saved: :{auto}
