--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c933898
-	base = 245623e
-	trim = 
-	trimbase = 
+	base = 9a3432e
+	trim = microstrain_inertial_rqt
+	trimbase = 245623e
