--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c933898
-	base = 2d4a8e2
-	trim = 
-	trimbase = 
+	base = f18f6b1
+	trim = microstrain_inertial_msgs
+	trimbase = 2d4a8e2
