--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c933898
-	base = f64804e
-	trim = 
-	trimbase = 
+	base = 0a11c7e
+	trim = microstrain_inertial_examples
+	trimbase = f64804e
