--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c933898
-	base = d94eba5
-	trim = 
-	trimbase = 
+	base = 77a8f95
+	trim = microstrain_inertial_driver
+	trimbase = d94eba5
