--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_rqt
-	previous = 
-	base = c239833
+	previous = c239833
+	base = d9671bc
 	trim = 
 	trimbase = 
