--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_rqt
-	previous = 
-	base = 9a3432e
+	previous = 9a3432e
+	base = d1d09b6
 	trim = 
 	trimbase = 
