--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_examples
-	previous = 
-	base = 57a6d48
+	previous = 57a6d48
+	base = e385d68
 	trim = 
 	trimbase = 
