--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_msgs
-	previous = 
-	base = 36d51c6
+	previous = 36d51c6
+	base = 6066df2
 	trim = 
 	trimbase = 
