--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_driver
-	previous = 
-	base = 77a8f95
+	previous = 77a8f95
+	base = 2e7418c
 	trim = 
 	trimbase = 
