--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_driver
-	previous = 
-	base = bc4bb99
+	previous = bc4bb99
+	base = 8c3b54d
 	trim = 
 	trimbase = 
