--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_rqt
-	previous = 
-	base = 0c3d486
+	previous = 0c3d486
+	base = 2ae6ebe
 	trim = 
 	trimbase = 
