--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_msgs
-	previous = 
-	base = 989be82
+	previous = 989be82
+	base = 714f729
 	trim = 
 	trimbase = 
