--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_examples
-	previous = 
-	base = 76b5c21
+	previous = 76b5c21
+	base = 8bbdb31
 	trim = 
 	trimbase = 
