--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/microstrain_inertial_driver
-	previous = 
-	base = 8b66166
+	previous = 8b66166
+	base = 07d6000
 	trim = 
 	trimbase = 
