--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/microstrain_inertial_driver
-	previous = 
-	base = a71cc10
+	previous = a71cc10
+	base = 2c8a828
 	trim = 
 	trimbase = 
