--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/microstrain_inertial_rqt
-	previous = 
-	base = 07b04e7
+	previous = 07b04e7
+	base = f7036e7
 	trim = 
 	trimbase = 
