--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_examples
-	previous = 
-	base = 0a11c7e
+	previous = 0a11c7e
+	base = ce26430
 	trim = 
 	trimbase = 
