--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/microstrain_inertial_examples
-	previous = 
-	base = 5d704be
+	previous = 5d704be
+	base = f6c9292
 	trim = 
 	trimbase = 
