--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/microstrain_inertial_msgs
-	previous = 
-	base = 10dec8a
+	previous = 10dec8a
+	base = bf132e3
 	trim = 
 	trimbase = 
