--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/microstrain_inertial_msgs
-	previous = 
-	base = f18f6b1
+	previous = f18f6b1
+	base = c15c069
 	trim = 
 	trimbase = 
