--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2639e10
-	base = 8d2aedc
+	base = 128a34a
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = 8d2aedc
