--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2639e10
-	base = ae18457
+	base = 819c728
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = ae18457
