--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2639e10
-	base = 9d0db87
+	base = 761abb8
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 9d0db87
