--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2639e10
-	base = 6713c72
+	base = 8ca7c0a
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 6713c72
