--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42efbd9
-	base = 3e7a61f
+	base = 58ed05b
 	trim = microstrain_inertial_driver
-	trimbase = 
+	trimbase = 3e7a61f
