--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42efbd9
-	base = 6466abb
+	base = 655efb3
 	trim = microstrain_inertial_msgs
-	trimbase = 
+	trimbase = 6466abb
