--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42efbd9
-	base = 0bb526b
+	base = 7e05e2c
 	trim = microstrain_inertial_examples
-	trimbase = 
+	trimbase = 0bb526b
