--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42efbd9
-	base = b3a0c1d
+	base = 1eb4998
 	trim = microstrain_inertial_rqt
-	trimbase = 
+	trimbase = b3a0c1d
